[package]
name = "wechaty_puppet"
version = "0.1.0"
authors = ["Gabriel Wu <qqbbnease1004@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4"
